# cargo-add-cmp.nvim

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
