[package]
name = "cargo-add-nvim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nvim-oxi = "0.1.3"
cargo_metadata = "0.15.0"
crates-index = "0.18.9"
anyhow = "1.0.65"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
reqwest = "0.11.12"
tokio = { version = "1.21.1", features = ["full"] }
regex = "1.6.0"

[lib]
crate-type = ["cdylib"]